--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
       </form>
     </div>
 
-    <script src="index.js"></script>
+    <script type module src="index.js"></script>
   </body>
 </html>
